# Audiometer-Project-2026

./: .gitignore  README.md  pom.xml
.github/workflows/: ci.yml
audiometer_fp/: README.md  conftest.py  pyproject.toml  requirements.txt
audiometer_fp/audiometer/: __init__.py  audiogram.py  cli.py  hughson_westlake.py  iec60645.py  pure_calc.py  response.py  serial_bridge.py  types.py
audiometer_fp/tests/: test_audiogram.py  test_hughson_westlake.py  test_iec60645.py  test_properties.py  test_pure_calc.py  test_response.py  test_types.py
src/main/java/com/audiometer/guiproject/: AudiometerController.java  AudiometerView.java  HelloApplication.java  Launcher.java  SerialManager.java
src/main/resources/: style.css
src/main/resources/com/audiometer/guiproject/: hello-view.fxml
